--- a/FlowControlClassifier.csproj
+++ b/FlowControlClassifier.csproj
@@ -63,9 +63,7 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="ClassificationFormat.cs" />
-    <Compile Include="ClassificationType.cs" />
-    <Compile Include="Classifier.cs" />
+    <Compile Include="ControlFlowClassifier.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
