More renaming to fix things

--- a/FlowControlClassifier.csproj
+++ b/FlowControlClassifier.csproj
@@ -63,7 +63,7 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="ControlFlowClassifier.cs" />
+    <Compile Include="FlowControlClassifier.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
