Added new classification for C# LINQ operators

--- a/FlowControlClassifier.csproj
+++ b/FlowControlClassifier.csproj
@@ -63,7 +63,9 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Classifications.cs" />
     <Compile Include="FlowControlClassifier.cs" />
+    <Compile Include="LanguageItems.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
