--- a/KeywordClassifier.csproj
+++ b/KeywordClassifier.csproj
@@ -36,9 +36,6 @@
     <Reference Include="Microsoft.VisualStudio.CoreUtility">
       <Private>False</Private>
     </Reference>
-    <Reference Include="Microsoft.VisualStudio.ExtensibilityHosting">
-      <Private>False</Private>
-    </Reference>
     <Reference Include="Microsoft.VisualStudio.Text.Data">
       <Private>False</Private>
     </Reference>
@@ -77,7 +74,7 @@
     </Content>
   </ItemGroup>
   <ItemGroup>
-    <None Include="extension.vsixmanifest" />
+    <None Include="source.extension.vsixmanifest" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$(MSBuildExtensionsPath)\Microsoft\VisualStudio\v10.0\VSSDK\Microsoft.VsSDK.targets" />
