Updating VSIX icon and preview images

--- a/KeywordClassifier.csproj
+++ b/KeywordClassifier.csproj
@@ -68,9 +68,11 @@
   <ItemGroup>
     <Content Include="Classifier_large.png">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      <IncludeInVSIX>true</IncludeInVSIX>
     </Content>
     <Content Include="Classifier_small.png">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      <IncludeInVSIX>true</IncludeInVSIX>
     </Content>
   </ItemGroup>
   <ItemGroup>
